# JeebsAI

./: ## Chat Customization Diagnostics.md  ._target  .dockerignore  .env.example  .gitattributes  .gitignore  20240101000000_initial_setup.sql  20260225_create_chat_history.sql  20260225_create_feedback.sql  ADMIN_TOOLS_TEST.md  ALL_COMPILATION_ERRORS_FIXED.md  BUILD_STATUS.txt  CHANGELOG.md  CODEBASE_IMPROVEMENT_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_COMMANDS.txt  DEPLOYMENT_SCRIPTS.md  DEPLOYMENT_WEB_SEARCH_FIX.md  DEPLOY_EVERYTHING.sh  DO_THIS_NOW.txt  Dockerfile  ENHANCEMENT_SUMMARY.md  ENHANCEMENT_TECHNICAL_DETAILS.md  EXECUTE_DEPLOY.sh  FINAL_INSTRUCTIONS.txt  FINAL_PUSH.sh  IMPLEMENTATION_COMPLETE.md  INSTALL_VPS.md  INSTRUCTIONS.txt  LEARNING_ENHANCEMENTS.md  LEARNING_SYSTEM.md  LICENSE  MERGE_SUMMARY.md  PGP_LOGIN_README.md  PHASE3_COMPLETION.md  PROACTIVE_ACTIONS.md  PR_DESCRIPTION.md  (+167 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
.githooks/: post-commit
.github/: GITHUB_ACTIONS_SETUP.md
.scratch/: mcp-state.json
.sqlx/: query-6b87e6b1bc57fa23956027ff3557daba3dbbc8f0e0e9477fb98b7255d52c3dca.json  query-e6456b4d077cab247ab277bff65e53eb4198b414c58b093b0b239a000df3f97b.json  query-f5314f74d6b01e927240564721fec7305c1594a719087874f4fba6398611490c.json
app/: admin.py  app.py  auth.py  chat.py  conversation_features.py  holographic_brain.py  models.py  tools.py  tools_api.py
deploy/: Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  fix-login.sh  jeebs.service.template  redeploy.sh  setup-persistent-db.sh
docs/: INTERNET_TOGGLE.md
migrations/: 20240101000000_initial_setup.sql  20240101000001_add_created_at_to_brain_nodes.sql  20240101000002_add_ip_blacklist.sql  20240101000003_add_ip_whitelist.sql  20240101000004_add_knowledge_triples.sql  20240101000005_add_user_sessions.sql  20240522000001_create_jeebs_store.sql  20260221000000_create_system_logs.sql  20260221000001_create_anomalies.sql  20260221000002_create_reasoning_traces.sql  20260301000000_create_users_table.sql  20260301000001_create_brain_nodes_v2.sql  20260301000002_create_connections.sql  20260301000003_create_action_logs.sql  20260322000000_create_chat_history.sql
packaging/: install-release.sh  install-systemd.sh  jeebs-docker.service  jeebs.env.example  jeebs.service
plugins/: README.md
scripts/: add_webui_and_redeploy_staging.sh  apply_updates_from_github.sh  backup.sh  bump_version_on_commit.sh  check_backup_logs.sh  check_webui_staging.sh  cleanup_old_dir.sh  deploy.sh  deploy_production.sh  deploy_production_with_webhook.sh  deploy_staging.sh  deploy_to_server.sh  deploy_training_duration.sh  devline_release.sh  diagnose_403.sh  final_fix_and_deploy.sh  final_path_sync.sh  fix_git_corruption.sh  fix_jeebs_server.sh  install-git-hooks.sh  install_service.sh  kill_cargo_lock.sh  master_backup.sh  master_restore.sh  prep-refactor.sh  push_and_deploy.sh  push_to_main.sh  redeploy_staging_webui.sh  rename_username.sh  rename_username_peci_to_peaci.sh  restore.sh  setup_cron_backup.sh  setup_github_webhook.sh  setup_ssl.sh  update_from_repo.sh  update_jeebs_proxy.sh  update_vps_logs_and_evolution.sh  vps_deploy.sh  (+1 more)
(+143 files in other folders)
