[package]
name = "jeebs"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate"] }
blake3 = "1.5"
zstd = "0.13"
chrono = "0.4"
evalexpr = "13.1.0"
hex = "0.4"
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web-actors = "4"
actix = "0.13"
once_cell = "1.21"
rand_core = "0.6"
csv = "1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
md-5 = "0.10"
sha1 = "0.10"
regex = "1"
actix-multipart = "0.6"
futures-util = "0.3"
sequoia-openpgp = "1.21"
# Force update: deduplicated dependencies
