[package]
name = "jeebs"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate", "runtime-tokio-rustls"] }
blake3 = "1.5"
zstd = "0.13"
chrono = "0.4"
evalexpr = "13.1.0"
hex = "0.4"
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web-actors = "4"
actix = "0.13"
once_cell = "1.21"
rand_core = "0.6"
csv = "1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
md-5 = "0.10"
sha1 = "0.10"
regex = "1"
actix-multipart = "0.6"
futures-util = "0.3"
sequoia-openpgp = "1.21"
sysinfo = "0.38.2"
scraper = "0.25.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
async-trait = "0.1.89"
log = "0.4.29"
reqwest = "0.13.2"
meval = "0.2.0"
sha2 = "0.10.9"
hmac = "0.12.1"
lazy_static = "1.5.0"
actix-files = "0.6.10"
actix-governor = "0.10.0"
actix-cors = "0.7.1"
# Force update: deduplicated dependencies
